@@ -1,3 +1,10 @@
+2004-10-26  Paolo Carlini  <pcarlini@suse.de>
+
+	* include/bits/basic_string.h (erase(size_type, size_type),
+	erase(iterator), erase(iterator, iterator)): Call _M_mutate
+	instead of _M_replace_safe, equivalent when the fourth argument
+	is zero and simpler.
+
 2004-10-26  Benjamin Kosnik  <bkoz@redhat.com>
 
 	* include/ext/array_allocator.h (array::allocate): Check for valid
